// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/NavCookieBanner Basic 1`] = `
<div
  className="psds-navcookiebanner"
>
  <p
    className="psds-navcookiebanner__message"
  >
    <label>
      Pluralsight uses cookies.
    </label>
      
    <a
      href="//www.pluralsight.com/privacy"
    >
      Learn more about your privacy
    </a>
  </p>
  <button
    aria-label="close"
    className="psds-navcookiebanner__dismiss"
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m17.646 7.056-.702-.702a.5.5 0 0 0-.708 0L12 10.59 7.764 6.354a.5.5 0 0 0-.708 0l-.702.702a.5.5 0 0 0 0 .708L10.59 12l-4.236 4.236a.5.5 0 0 0 0 .707l.702.703a.5.5 0 0 0 .708 0L12 13.41l4.236 4.236a.5.5 0 0 0 .708 0l.702-.703a.5.5 0 0 0 0-.707L13.41 12l4.236-4.236a.5.5 0 0 0 0-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/NavCookieBanner Custom Message 1`] = `
<div
  className="psds-navcookiebanner"
>
  <p
    className="psds-navcookiebanner__message"
  >
    <label>
      This is here to annoy you.
    </label>
  </p>
  <button
    aria-label="close"
    className="psds-navcookiebanner__dismiss"
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m17.646 7.056-.702-.702a.5.5 0 0 0-.708 0L12 10.59 7.764 6.354a.5.5 0 0 0-.708 0l-.702.702a.5.5 0 0 0 0 .708L10.59 12l-4.236 4.236a.5.5 0 0 0 0 .707l.702.703a.5.5 0 0 0 .708 0L12 13.41l4.236 4.236a.5.5 0 0 0 .708 0l.702-.703a.5.5 0 0 0 0-.707L13.41 12l4.236-4.236a.5.5 0 0 0 0-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;
